agregado un commit con otro message

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <link rel="stylesheet" href="style.css" />
     <title>Blog Curso Git</title>
   </head>
-  <body></body>
+  <body>
+    
+    <div>
+        <img src="/src/images/gitLogo.jpg" alt="git_logo">
+        <h1>Blog Curso Git</h1>
+
+    </div>
+    Aqui va el contenido del blog
+    <div>
+        
+  </body>
 </html>
