agregando el css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <title>Blog Curso Git</title>
   </head>
   <body>
+    
+    <div class="bar">
+        <img class="logo" src="/src/images/gitLogo.png" alt="git_logo">
+        <h1>Blog Curso Git</h1>
+    </div>
 
     <h1>Ranking de Videojuegos para PC 2023</h1>
 <ul>
@@ -28,11 +33,6 @@
     <li>10. Minecraft</li>
 </ul>
 
-    <div>
-        <img src="/src/images/gitLogo.jpg" alt="git_logo">
-        <h1>Blog Curso Git</h1>
-
-    </div>
     Aqui va el contenido del blog
     <div>
         
