Change Dofa2 for NSF Heat

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li>5. Valorant</li>
     <li>6. Destiny 2</li>
     <li>7. Fortnite</li>
-    <li>8. Dota 2</li>
+    <li>8. Need for Speed Heat</li>
     <li>9. League of Legends</li>
     <li>10. Minecraft</li>
 </ul>
